# robrix.github.io

./: .gitignore  404.html  404.md  CNAME  README.md  Site.hs  _config.yml  antitypical-com.cabal  feed.xml  index.html  keybase.txt
_css/: antitypical.css  basscss.css  pixyll.css  solarized-light.css
_drafts/: pattern-matching-over-recursive-values-in-swift.markdown
_includes/: footer.html  head.html  header-wide.html  header.html  navigation.html  pagination.html
_layouts/: center.html  default.html  page.html  post-wide.html  post.html  wide.html
_posts/: 2014-04-20-on-the-order-of-neptune.markdown  2015-07-01-pattern-matching-over-recursive-values-in-swift.markdown  2020-03-29-all-you-need-is-lambda-1-booleans.md
_site/: index.html
_site/css/: stylesheet.css
_site/posts/2020-03-29-all-you-need-is-lambda-1-booleans/: index.html
css/: pixyll.css
docs/: 404.html  feed.xml  index.html
docs/css/: stylesheet.css
docs/js/: polarized.js  sequent.js
docs/posts/2014-04-20-on-the-order-of-neptune/: index.html
js/: polarized.js  sequent.js
posts/: 2014-04-20-on-the-order-of-neptune.md  2015-07-01-pattern-matching-over-recursive-values-in-swift.md  2020-03-29-all-you-need-is-lambda-1-booleans.md  2021-06-07-duality.md  2021-07-08-environment-passing-style.md  2021-07-16-sequent-calculi-and-metacircularity.md  2021-07-28-when-howard-met-curry.md  2021-08-14-sequent-calculus-cheat-sheet.html  2021-08-14-sequent-calculus-cheat-sheet.md
posts/2015-07-01-pattern-matching-over-recursive-values-in-swift/: index.html
(+9 files in other folders)
