cabal-version:      2.2

name:               antitypical-com
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll ^>= 4.13
  ghc-options:      -threaded
  default-language: Haskell2010
